# esp32s3-practice

./: .gitignore  LICENSE  README.md  partitions.csv  sdkconfig.defaults
components/button/: CMakeLists.txt  button.c
components/button/include/: button.h
components/display/: CMakeLists.txt  epd_canvas.c  epd_text.c  idf_component.yml  ssd1683.c
components/display/include/: epd.h  epd_text.h  ssd1683.h
components/mic/: CMakeLists.txt  mic.c
components/mic/include/: mic.h
components/net/: CMakeLists.txt  net.c
components/net/include/: net.h
components/stt/: CMakeLists.txt  stt.c
components/stt/include/: stt.h
docs/superpowers/plans/: 2026-06-26-esp32s3-button-stt.md
docs/superpowers/specs/: 2026-06-26-esp32s3-button-stt-design.md
main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c
